# Setup-Agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  agent.py  cli.py  config.py  dashboard.py  healthcheck.py  history.py  hooks.py  logger.py  main.py  notifier.py  pyproject.toml  rollback.py  sandbox.py  templates.py  tools.py
src/setup_agent/: __init__.py  agent.py  cli.py  config.py  dashboard.py  healthcheck.py  history.py  hooks.py  logger.py  main.py  notifier.py  rollback.py  sandbox.py  tools.py
src/setup_agent/web/: __init__.py  server.py
web/: index.html  server.py
~/.config/BraveSoftware/Brave-Browser/: Local State  SingletonCookie  SingletonLock  SingletonSocket
~/.config/BraveSoftware/Brave-Browser/Default/: .org.chromium.Chromium.RtSGCi  DIPS-wal  History  History-journal  Network Persistent State  Preferences  Reporting and NEL  Top Sites  Web Data
~/.config/BraveSoftware/Brave-Browser/Default/AdBlock Custom Resources/: LOG
~/.config/BraveSoftware/Brave-Browser/Default/DawnGraphiteCache/: data_1  index
~/.config/BraveSoftware/Brave-Browser/Default/DawnWebGPUCache/: data_1  index
~/.config/BraveSoftware/Brave-Browser/Default/Extension Rules/: LOG
~/.config/BraveSoftware/Brave-Browser/Default/Extension Scripts/: LOG
~/.config/BraveSoftware/Brave-Browser/Default/Extension State/: LOG
~/.config/BraveSoftware/Brave-Browser/Default/GPUCache/: data_0  data_1  data_2  index
~/.config/BraveSoftware/Brave-Browser/GrShaderCache/: data_0  data_1  f_000001  f_000002  index
~/.config/BraveSoftware/Brave-Browser/GraphiteDawnCache/: data_1  index
~/.config/BraveSoftware/Brave-Browser/Safe Browsing/: ChromeExtMalware.store  ChromeExtMalware.store.32_13423319972976283  UrlBilling.store  UrlBilling.store.4_13423319972981451  UrlCsdDownloadAllowlist.store  UrlMalBin.store  UrlMalBin.store.4_13423319972982363  UrlMalware.store  UrlMalware.store.4_13423319972972641  UrlSoceng.store  UrlUws.store  UrlUws.store.4_13423319972974615
~/.config/BraveSoftware/Brave-Browser/ShaderCache/: data_0  data_1  data_2  index
~/.config/BraveSoftware/Brave-Browser/component_crx_cache/: metadata.json
(+51 files in other folders)
